# rust-microservice-actix

./: Cargo.toml  LICENSE  README.md
src/: main.rs  model.rs  storage.rs
