[package]
name = "printer"
version = "0.1.0"
authors = ["Marco Amann <undisclosed@example.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# Runtime and futures
tokio = { version = "0.2", features = ["full"] }
futures = "0.3"

# The web framework
actix-web = "2.0"
actix-rt = "1.0"

# For making (asynchronous) requests
reqwest = { version ="0.10.4", features = ["default", "json"] }
hyper = "0.13.5"    # needed bc reqwest does not reexport the status codes


# Handler related crates
serde = { version = "1.0.43", features = ["derive"] }
serde_json = "1.0.16"
validator = "0.10"
validator_derive = "0.10"

# Logging related crates
env_logger = "0.7"
log = "0.4.8"

# Database related crates
tokio-postgres = "0.5.1"
chrono = { version = "0.4.11", features = ["serde"] }
bb8 = { version = "0.4.0" }
bb8-postgres =  { version = "0.4.0", features = ["with-chrono-0_4"] }


# Metrics related crates
prometheus = "0.8"
actix-web-prom = "0.2"